# YLAI-AUTO-PLATFORM

./: .env.example  .gitignore  =1.7.0  GITHUB_PUSH_GUIDE.md  PRODUCTION_QUICK_START.md  QUICK_PUSH.md  README.md  YL-copilot-rules.json  push_to_github.sh  pyproject.toml  start.sh  成果统计.md  执行总结.md  诊断报告_完整项目分析.md
.github/: .copilot-config.json  COPILOT_CONFIG_GUIDE.md  COPILOT_CORE_TRIGGERS.md  COPILOT_INTEGRATION_GUIDE.md  COPILOT_QUICK_START.md  PLACEHOLDER_CHECKLIST.md  PLACEHOLDER_GUIDE.md  PORTABILITY_VALIDATION_REPORT.md  README.md  copilot-instructions.md  dependabot.yml  gitc.md  配置映射与扩展指南.md
ai-docker/: index.html  requirements.txt  results.html
alembic/: env.py  script.py.mako
backend/: .env.example  README.md  ai_bridge.py  app.py  auto_model.py  docker-entrypoint.sh  live_monitor.py  main.py  main_old.py  optimizer.py  orchestrator.py  proxy_main.py  pytest.ini  requirements.txt  web_console.py
config/: modules_policy.json  plugin_registry.json  核心指向.json
data/: ylai.db
docker/: .env.example  Dockerfile.ai-app  Dockerfile.prod  api.Dockerfile  docker-compose.local.yml  docker-compose.prod.yml  local-nginx.conf  logstash.conf  nginx.Dockerfile  nginx.conf  startup-check.sh
docs/: API_SPECIFICATION.md  DEPLOYMENT.md  SLO.md  auto-scripts-guide.md  copilot-instructions.md  progress.md  下一步优化建议.md  下一步行动计划.md  优化实施代码示例.md  优化建议-快速检查清单.md  优化建议总结报告.md  优化建议文档导航.md  优化执行计划.md  优化方向快速参考.md  全局整理优化报告.md  待完成任务清单文档.md  快速参考指南.md  快速启动指南.md  整理验证自动化报告.md  生产优化完成报告.md  生产优化执行报告.md  第一梯队优化执行总结.md  第二梯队优化执行总结.md  第二梯队集成总结.md  系统验证完成报告.md  统一接口映射表.md  网页修复工作完成清单.md  网页架构和域名配置.md  集成完成报告.md  项目文档合集.md
frontend/: .env.example  backend-mock.js  cypress.config.js  dev-server.js  index.html  jest.config.js  package-lock.json  package.json  server.js  vite.config.js
monitoring/: alertmanager.yml  docker-compose.yml  prometheus-rules.yml  prometheus.yml
pia/: README.md  credentials.example.txt
scripts/: README.md  ai_dev.sh  audit_docs.py  auto_checks.sh  auto_detect_env.sh  auto_web_opener.py  check_frontend_pages.sh  check_registry_linkage.py  check_services.py  checks_apis_accept401.py  ci_container_deps_check.sh  cleanup.sh  cleanup_stacks.sh  consistency_check.py  dedupe_completed_task.py  dev-start.sh  e2e_dag_sample.py  e2e_pipeline_ws.py  ensure_model.sh  env_check.py  env_install.sh  fix_root_mount.sh  full_suite.py  full_suite_8003.py  gen_api_map_json.py  gen_container_deps_md.py  gen_from_spec.py  global_config_manager.py  hx.py  hx.sh  import_grafana_dashboard.sh  inject_assets.py  local_security_scan.sh  mapping_validator.py  pages_consistency_report.sh  probe_front_pages.sh  probe_health.sh  probe_ws.py  production-audit.py  quick_optimize.sh  (+14 more)
tools/: alembic_ci_check.py  sync_requirements.py
极限部署清单/: 01_主窗口与分区.md  02_风控与突破.md  03_分布式采集与代理池.md  04_AI模型与训练.md  05_Fuzz与参数变异.md  06_数据挖掘与分析.md  07_健康检测与自愈.md  (+15 more)
(+393 files in other folders)
