[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ylai-auto-platform"
version = "1.7.0"
description = "Enterprise-grade automated web scraping platform with AI integration"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "AI System", email = "ai@ylai.com" }]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.124.0",
    "uvicorn>=0.38.0",
    "pydantic>=2.12.0",
    "starlette>=0.50.0",
    "requests==2.32.3",
    "PyYAML==6.0.2",
    "python-dotenv==1.0.1",
    "watchfiles>=0.21",
    "python-multipart>=0.0.9",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "scrapy>=2.11.0",
    "requests-html>=0.10.0",
    "fake-useragent>=1.4.0",
    "selenium>=4.15.0",
    "webdriver-manager>=4.0.0",
    "aiohttp>=3.9.0",
    "pandas>=2.1.0",
    "numpy>=1.24.0",
    "sqlalchemy>=2.0.0",
    "pymongo>=4.6.0",
    "celery>=5.3.0",
    "redis>=4.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
]
ai = [
    "torch>=2.1.0",
    "transformers>=4.35.0",
    "scikit-learn>=1.3.0",
    "ddddocr>=1.4.0",
    "easyocr>=1.7.0",
    "opencv-python>=4.8.0",
    "accelerate>=0.20.0",
]

[tool.black]
line-length = 100
target-version = ["py311", "py312"]
include = '\.pyi?$'
exclude = '\.git|\.hg|\.mypy_cache|\.tox|\.venv|_build|buck-out|build|dist'

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true
known_first_party = ["backend"]

[tool.pytest.ini_options]
testpaths = ["backend/tests", "backend/test_smoke.py"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "--strict-markers --tb=short"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "smoke: marks tests as smoke tests",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.coverage.run]
source = ["backend"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
]

[project.urls]
Homepage = "https://github.com/ylai-ai/ylai-auto-platform"
Documentation = "https://ylai-auto-platform.readthedocs.io"
Repository = "https://github.com/ylai-ai/ylai-auto-platform.git"
Issues = "https://github.com/ylai-ai/ylai-auto-platform/issues"
